Do not use a local WhitespaceAttacher for <content>.

<content> elements are not in the flat tree and should be treated like
display:contents in order to attach whitespace LayoutText objects
correctly.

This bug caused regressions for the unification of ComputedStyle
storage.

Bug: 915669, 914784
Change-Id: I8afce3bd7fd67244a8784e17acbefc6dd068a8e3
Reviewed-on: https://chromium-review.googlesource.com/c/1379767
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617193}